3.10.5/_sources/gallery/text_labels_and_annotations/annotation_basic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/text_labels_and_annotations/annotation_basic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_text_labels_and_annotations_annotation_basic.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_annotation_basic.py:


=================
Annotating a plot
=================

This example shows how to annotate a plot with an arrow pointing to provided
coordinates. We modify the defaults of the arrow, to "shrink" it.

For a complete overview of the annotation capabilities, also see the
:ref:`annotation tutorial<annotations>`.

.. redirect-from:: /gallery/pyplots/annotation_basic

.. GENERATED FROM PYTHON SOURCE LINES 14-29

.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np

    fig, ax = plt.subplots()

    t = np.arange(0.0, 5.0, 0.01)
    s = np.cos(2*np.pi*t)
    line, = ax.plot(t, s, lw=2)

    ax.annotate('local max', xy=(2, 1), xytext=(3, 1.5),
                arrowprops=dict(facecolor='black', shrink=0.05),
                )
    ax.set_ylim(-2, 2)
    plt.show()




.. image-sg:: /gallery/text_labels_and_annotations/images/sphx_glr_annotation_basic_001.png
   :alt: annotation basic
   :srcset: /gallery/text_labels_and_annotations/images/sphx_glr_annotation_basic_001.png, /gallery/text_labels_and_annotations/images/sphx_glr_annotation_basic_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 30-36

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.annotate` / `matplotlib.pyplot.annotate`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.048 seconds)


.. _sphx_glr_download_gallery_text_labels_and_annotations_annotation_basic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: annotation_basic.ipynb <annotation_basic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: annotation_basic.py <annotation_basic.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: annotation_basic.zip <annotation_basic.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
